refactor: step1피드백 반영